--- a/sqlite_tut/MediaSelectorVC.xib
+++ b/sqlite_tut/MediaSelectorVC.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MediaSelectorVC" customModule="sqlite_tut" customModuleProvider="target">
             <connections>
                 <outlet property="CltnVW" destination="evm-0P-6BX" id="Kcu-uy-Nps"/>
-                <outlet property="lblSelectedItems" destination="MGT-8H-LjZ" id="t2y-gX-IO6"/>
+                <outlet property="checkBtn" destination="Yfd-Rc-iPE" id="QfZ-Qe-axM"/>
                 <outlet property="lblTitle" destination="fzH-P3-QLN" id="lrR-hD-1Ze"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view1" destination="z0W-WB-VNu" id="dvl-6n-nnB"/>
@@ -25,10 +25,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z0W-WB-VNu">
-                    <rect key="frame" x="0.0" y="39" width="375" height="628"/>
+                    <rect key="frame" x="0.0" y="59" width="375" height="608"/>
                     <subviews>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="evm-0P-6BX">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="628"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="608"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="PFo-oa-RjF">
                                 <size key="itemSize" width="134" height="134"/>
@@ -40,10 +40,10 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="evm-0P-6BX" secondAttribute="bottom" id="DvD-vP-Fhh"/>
-                        <constraint firstItem="evm-0P-6BX" firstAttribute="top" secondItem="z0W-WB-VNu" secondAttribute="top" id="IpR-I1-z6W"/>
-                        <constraint firstItem="evm-0P-6BX" firstAttribute="leading" secondItem="z0W-WB-VNu" secondAttribute="leading" id="PJn-uu-73G"/>
-                        <constraint firstAttribute="trailing" secondItem="evm-0P-6BX" secondAttribute="trailing" id="QIP-zz-4ut"/>
+                        <constraint firstAttribute="trailing" secondItem="evm-0P-6BX" secondAttribute="trailing" id="6b9-7e-nVc"/>
+                        <constraint firstAttribute="bottom" secondItem="evm-0P-6BX" secondAttribute="bottom" id="D7G-C9-ark"/>
+                        <constraint firstItem="evm-0P-6BX" firstAttribute="leading" secondItem="z0W-WB-VNu" secondAttribute="leading" id="JLa-00-kME"/>
+                        <constraint firstItem="evm-0P-6BX" firstAttribute="top" secondItem="z0W-WB-VNu" secondAttribute="top" id="ihO-N6-XGr"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7tV-rU-qcI">
@@ -65,15 +65,6 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MGT-8H-LjZ">
-                            <rect key="frame" x="261" y="0.0" width="54" height="45"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="MGT-8H-LjZ" secondAttribute="height" multiplier="6:5" id="6kA-YJ-LoZ"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHC-P1-tDY">
                             <rect key="frame" x="-8" y="-3" width="50" height="50"/>
                             <constraints>
@@ -85,22 +76,31 @@
                                 <action selector="handleBtnBack:" destination="-1" eventType="touchUpInside" id="Z6N-Ex-0Wd"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yfd-Rc-iPE">
+                            <rect key="frame" x="279" y="8" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="Yfd-Rc-iPE" secondAttribute="height" multiplier="1:1" id="WU5-VN-bpx"/>
+                            </constraints>
+                            <state key="normal" image="unchecked.png"/>
+                            <connections>
+                                <action selector="handleCheckBtn:" destination="-1" eventType="touchUpInside" id="6ve-38-Rca"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="fzH-P3-QLN" firstAttribute="centerY" secondItem="7tV-rU-qcI" secondAttribute="centerY" id="1Xz-G4-hqk"/>
                         <constraint firstAttribute="bottom" secondItem="aHC-P1-tDY" secondAttribute="bottom" constant="-2" id="46d-LW-iQ8"/>
                         <constraint firstItem="fzH-P3-QLN" firstAttribute="centerX" secondItem="7tV-rU-qcI" secondAttribute="centerX" id="53z-Kg-6Zm"/>
-                        <constraint firstAttribute="trailing" secondItem="MGT-8H-LjZ" secondAttribute="trailing" constant="60" id="EKD-mp-3e5"/>
                         <constraint firstItem="aHC-P1-tDY" firstAttribute="leading" secondItem="7tV-rU-qcI" secondAttribute="leading" constant="-8" id="PwR-8d-PHt"/>
                         <constraint firstItem="fzH-P3-QLN" firstAttribute="top" secondItem="7tV-rU-qcI" secondAttribute="top" id="TPy-KT-aYS"/>
+                        <constraint firstItem="Yfd-Rc-iPE" firstAttribute="leading" secondItem="fzH-P3-QLN" secondAttribute="trailing" constant="23" id="bhe-Hb-DGi"/>
                         <constraint firstAttribute="bottom" secondItem="y4f-E6-lKa" secondAttribute="bottom" constant="-2" id="cwY-Tb-uIm"/>
+                        <constraint firstItem="Yfd-Rc-iPE" firstAttribute="centerY" secondItem="fzH-P3-QLN" secondAttribute="centerY" id="dMy-kS-8F4"/>
                         <constraint firstAttribute="trailing" secondItem="y4f-E6-lKa" secondAttribute="trailing" constant="8" id="fVF-PR-j4q"/>
                         <constraint firstAttribute="bottom" secondItem="fzH-P3-QLN" secondAttribute="bottom" id="lB1-AG-0h3"/>
-                        <constraint firstItem="MGT-8H-LjZ" firstAttribute="leading" secondItem="fzH-P3-QLN" secondAttribute="trailing" constant="5" id="mHX-y5-Qqn"/>
                         <constraint firstItem="aHC-P1-tDY" firstAttribute="top" secondItem="7tV-rU-qcI" secondAttribute="top" constant="-3" id="mUI-06-1rE"/>
                         <constraint firstAttribute="width" secondItem="7tV-rU-qcI" secondAttribute="height" multiplier="25:3" id="n5e-5H-4ZU"/>
-                        <constraint firstItem="MGT-8H-LjZ" firstAttribute="centerY" secondItem="7tV-rU-qcI" secondAttribute="centerY" id="oMg-xU-dIo"/>
                         <constraint firstItem="fzH-P3-QLN" firstAttribute="leading" secondItem="7tV-rU-qcI" secondAttribute="leading" constant="118" id="ojn-PI-0dz"/>
                         <constraint firstAttribute="trailing" secondItem="fzH-P3-QLN" secondAttribute="trailing" constant="119" id="pbW-k1-OA8"/>
                         <constraint firstItem="y4f-E6-lKa" firstAttribute="top" secondItem="7tV-rU-qcI" secondAttribute="top" constant="-3" id="tFW-qR-DWS"/>
@@ -110,18 +110,19 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="7tV-rU-qcI" secondAttribute="trailing" id="9Ao-Wz-Edo"/>
-                <constraint firstItem="z0W-WB-VNu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="VkK-uH-FBA"/>
-                <constraint firstAttribute="trailing" secondItem="z0W-WB-VNu" secondAttribute="trailing" id="b4b-Pt-CG5"/>
+                <constraint firstItem="z0W-WB-VNu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Liz-aP-InB"/>
+                <constraint firstItem="z0W-WB-VNu" firstAttribute="top" secondItem="7tV-rU-qcI" secondAttribute="bottom" constant="-6" id="OYp-bJ-5p2"/>
+                <constraint firstAttribute="trailing" secondItem="z0W-WB-VNu" secondAttribute="trailing" id="bNM-jg-fZz"/>
                 <constraint firstItem="7tV-rU-qcI" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dYO-hh-pEG"/>
+                <constraint firstAttribute="bottom" secondItem="z0W-WB-VNu" secondAttribute="bottom" id="e4f-yc-uDI"/>
                 <constraint firstItem="7tV-rU-qcI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="txV-Od-6CQ"/>
-                <constraint firstItem="z0W-WB-VNu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="39" id="wcy-11-xq4"/>
-                <constraint firstAttribute="bottom" secondItem="z0W-WB-VNu" secondAttribute="bottom" id="xap-b3-tFK"/>
             </constraints>
-            <point key="canvasLocation" x="-343.5" y="-19.5"/>
+            <point key="canvasLocation" x="-464" y="-185"/>
         </view>
     </objects>
     <resources>
         <image name="arrow-alt-right.png" width="50" height="50"/>
         <image name="backbtn.png" width="50" height="50"/>
+        <image name="unchecked.png" width="30" height="30"/>
     </resources>
 </document>
